# nuclone-core-api

./: .env.example  .gitignore  README.md  docker-compose.yml  pyproject.toml
database/: README.md  pyproject.toml
database/docs/: nuclone.dbml
database/sql/: 01_create_types.sql  04_insert_data.sql
database/src/sql/: 02_create_table.sql  03_create_constraints.sql
database/test/: test_atomicidade.sql  test_consistencia.sql  test_durabilidade.sql  test_isolamento.sql
src/: main.py
src/api/: main.py
src/api/routers/: cliente_router.py  pix_router.py
src/api/routers/cliente/: cliente_router.py
src/api/routers/pix/: pix_router.py
src/api/schemas/: cliente_schema.py  conta_schema.py
src/api/schemas/modules/cliente/: cliente_schema.py
src/api/schemas/modules/pix/: pix_schema.py
src/modules/cliente/: cliente_router.py
src/modules/conta/: conta_schema.py
src/modules/pix/: pix_router.py  pix_schema.py
