[project]
name = "nuclone-api"
version = "0.1.0"
description = ""
authors = [
    {name = "Bruno",email = "brunoferreirarodrigues26@outlook.com"}
]
requires-python = ">=3.12"
dependencies = [
    "fastapi (>=0.139.2,<0.140.0)",
    "uvicorn (>=0.51.0,<0.52.0)",
    "unicorn (>=2.1.4,<3.0.0)"
]


[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"
