[project]
name = "projeto-nuclone"
version = "0.1.0"
description = ""
authors = [
    {name = "Bruno",email = "brunoferreirarodrigues26@outlook.com"}
]
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "psycopg2-binary (>=2.9.12,<3.0.0)",
    "pydantic (>=2.13.4,<3.0.0)"
]


[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"
